# VarBundler

./: Cargo.toml
src/: main.rs
