[package]
name = "VarBundler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
fs_extra = "1.3.0"
glob = "0.3.1"
json = "0.12.4"
normalize-path = "0.2.1"
path-slash = "0.2.1"
walkdir = "2.5.0"
winapi = {version = "0.3.9", features = ["winuser", "processthreadsapi", "minwindef", "handleapi", "errhandlingapi", "securitybaseapi", "psapi"]}
winreg = "0.52.0"
zip = "2.2.0"
threadpool = "1.8.1"
threadpool_scope = "0.1.0"

[patch.crates-io]
zip = {path = "./zip2"}